--- a/src/partials/items_card.html
+++ b/src/partials/items_card.html
@@ -2,42 +2,42 @@
 	<div class="card" data-badge="new">
 		<div class="card_image">
 			<span class="product-badge">New</span>
-			<a href="#">
+			<a href="product_page.html" >
 				<img src="img/item1.png" alt="">
 			</a>
 			<div class="view-more">View More</div>
 		</div>
-		<a href="#" class="card_title">Kazaur Weaving Ring</a>
+		<a href="product_page.html" class="card_title">Kazaur Weaving Ring</a>
 		<div class="tax">$132.00</div>
 	</div>
 	<div class="card" data-badge="new">
 		<div class="card_image">
-			<a href="#">
+			<a href="product_page.html">
 				<img src="img/item2.png" alt="">
 			</a>
 			<div class="view-more">View More</div>
 		</div>
-		<a href="#" class="card_title">Kazaur Weaving Ring</a>
+		<a href="product_page.html" class="card_title">Kazaur Weaving Ring</a>
 		<div class="tax">$132.00</div>
 	</div>
 	<div class="card" data-badge="new">
 		<div class="card_image">
-			<a href="#">
+			<a href="product_page.html">
 				<img src="img/item3.png" alt="">
 			</a>
 			<div class="view-more">View More</div>
 		</div>
-		<a href="#" class="card_title">Kazaur Weaving Ring</a>
+		<a href="product_page.html" class="card_title">Kazaur Weaving Ring</a>
 		<div class="tax">$132.00</div>
 	</div>
 	<div class="card" data-badge="new">
 		<div class="card_image">
-			<a href="#">
+			<a href="product_page.html">
 				<img src="img/item4.jpg" alt="">
 			</a>
 			<div class="view-more">View More</div>
 		</div>
-		<a href="#" class="card_title">Kazaur Weaving Ring</a>
+		<a href="product_page.html" class="card_title">Kazaur Weaving Ring</a>
 		<div class="tax">$132.00</div>
 	</div>
 </div>
