--- a/src/partials/items_card_rings.html
+++ b/src/partials/items_card_rings.html
@@ -2,43 +2,93 @@
 	<div class="card" data-badge="new">
 		<div class="card_image">
 			<span class="product-badge">New</span>
-			<a href="#">
+			<a href="product_page.html">
 				<img src="img/item2_1.jpg" alt="">
 			</a>
 			<div class="view-more">View More</div>
 		</div>
-		<a href="#" class="card_title">Leaf Ortego Ring</a>
+		<a href="product_page.html" class="card_title">Leaf Ortego Ring</a>
 		<div class="tax">$120.00</div>
 	</div>
 	<div class="card" data-badge="new">
 		<div class="card_image">
-			<a href="#">
+			<a href="product_page.html">
 				<img src="img/item2_2.jpg" alt="">
 			</a>
 			<div class="view-more">View More</div>
 		</div>
-		<a href="#" class="card_title">Deccada Ring</a>
+		<a href="product_page.html" class="card_title">Deccada Ring</a>
 		<div class="tax">$80.00</div>
 	</div>
 	<div class="card" data-badge="new">
 		<div class="card_image">
-			<a href="#">
+			<a href="product_page.html">
 				<img src="img/item2_3.jpg" alt="">
 			</a>
 			<div class="view-more">View More</div>
 		</div>
-		<a href="#" class="card_title">Arrow Ortego Ring</a>
+		<a href="product_page.html" class="card_title">Arrow Ortego Ring</a>
 		<div class="tax">$118.00</div>
 	</div>
 	<div class="card" data-badge="new">
 		<div class="card_image">
-			<a href="#">
+			<a href="product_page.html">
 				<img src="img/item2_3.jpg" alt="">
 			</a>
 			<div class="view-more">View More</div>
 		</div>
-		<a href="#" class="card_title">Kazaur Weaving Ring</a>
-		<div class="tax">$132.00</div>
+		<a href="product_page.html" class="card_title">Arrow Ortego Ring</a>
+		<div class="tax">$118.00</div>
+	</div>
+	<div class="card" data-badge="new">
+		<div class="card_image">
+			<a href="product_page.html">
+				<img src="img/item2_2.jpg" alt="">
+			</a>
+			<div class="view-more">View More</div>
+		</div>
+		<a href="product_page.html" class="card_title">Deccada Ring</a>
+		<div class="tax">$80.00</div>
+	</div>
+	<div class="card" data-badge="new">
+		<div class="card_image">
+			<a href="product_page.html">
+				<img src="img/item2_3.jpg" alt="">
+			</a>
+			<div class="view-more">View More</div>
+		</div>
+		<a href="product_page.html" class="card_title">Arrow Ortego Ring</a>
+		<div class="tax">$118.00</div>
+	</div>
+	<div class="card" data-badge="new">
+		<div class="card_image">
+			<a href="product_page.html">
+				<img src="img/item2_3.jpg" alt="">
+			</a>
+			<div class="view-more">View More</div>
+		</div>
+		<a href="product_page.html" class="card_title">Arrow Ortego Ring</a>
+		<div class="tax">$118.00</div>
+	</div>
+	<div class="card" data-badge="new">
+		<div class="card_image">
+			<a href="product_page.html">
+				<img src="img/item2_2.jpg" alt="">
+			</a>
+			<div class="view-more">View More</div>
+		</div>
+		<a href="product_page.html" class="card_title">Deccada Ring</a>
+		<div class="tax">$80.00</div>
+	</div>
+	<div class="card" data-badge="new">
+		<div class="card_image">
+			<a href="product_page.html">
+				<img src="img/item2_3.jpg" alt="">
+			</a>
+			<div class="view-more">View More</div>
+		</div>
+		<a href="product_page.html" class="card_title">Arrow Ortego Ring</a>
+		<div class="tax">$118.00</div>
 	</div>
 </div>
 
