--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -283,7 +283,7 @@ a{
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		padding: 14px 30px;
+		padding: 12px 30px;
 		background-color: inherit;
 		border-radius: 0px;
 		gap: 16px;
@@ -453,10 +453,14 @@ a{
 
 
 ///////cart items //////
-.items_card.cart {
-	display: grid;
+
+.items_card__wrapper{
 	overflow-x: hidden;
 	padding: 40px;
+}
+
+.items_card.cart {
+	display: grid;
 	justify-content: start!important;
 
 	.card {
@@ -464,7 +468,7 @@ a{
 		align-items: flex-start;
 		gap: 20px;
 		margin-bottom: 20px;
-		width: 107%;
+		width: 100%;
 
 		.card_image.cart{
 			width: 250px;
@@ -572,3 +576,11 @@ a{
 		}
 	}
 }
+
+
+
+////body class scrolled///
+body.scrolled .cart-sidebar .cart-header {
+	padding: 31px 40px 31px 40px;
+}
+
