--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -31,7 +31,7 @@
 	&__bottom {
 		display: flex;
 		justify-content: space-around;
-		padding: 32px 0;
+		padding: 32px 0 30px 0;
 		position: absolute;
 		top: 48px;
 		left: 0;
@@ -386,7 +386,7 @@
 
 	.submenu-content.active {
 		display: flex;
-		justify-content: space-around;
+		justify-content: space-evenly;
 
 
 	}
@@ -576,5 +576,3 @@
 	}
 
 }
-
-
