--- a/src/scss/partials/main.scss
+++ b/src/scss/partials/main.scss
@@ -82,6 +82,7 @@
 				display: flex;
 				justify-content: center;
 				padding-top: 40px;
+				margin-top: 0;
 
 				a {
 					text-decoration: none;
