--- a/src/scss/partials/select2.scss
+++ b/src/scss/partials/select2.scss
@@ -39,7 +39,7 @@
 	transform: translateY(-50%);
 	width: 14px;
 	height: 8px;
-	background-image: url('./arow.svg');
+	background-image: url('/img/arow.svg');
 	background-repeat: no-repeat;
 	background-size: contain;
 	pointer-events: none;
@@ -78,3 +78,5 @@
 .select2-container--default .select2-results__option[aria-selected="true"]{
 	color: #FFFFFF;
 }
+
+
