--- a/src/scss/partials/items_card.scss
+++ b/src/scss/partials/items_card.scss
@@ -13,7 +13,7 @@
 
 
 			.card_image {
-				width: auto;
+				max-width: 354px;
 				height: 441px;
 				overflow: hidden;
 				position: relative;
@@ -28,7 +28,12 @@
 						opacity: 0.8;
 					}
 				}
+
 			}
+			.card_image.main{
+				width: 354px;
+			}
+
 
 			.view-more {
 				position: absolute;
