--- a/src/partials/items_card.html
+++ b/src/partials/items_card.html
@@ -1,6 +1,6 @@
 <div class="items_card">
 	<div class="card" data-badge="new">
-		<div class="card_image main">
+		<div class="card_image">
 			<span class="product-badge">New</span>
 			<a href="product_page.html" >
 				<img src="img/item1.png" alt="">
@@ -11,7 +11,7 @@
 		<div class="tax">$132.00</div>
 	</div>
 	<div class="card" data-badge="new">
-		<div class="card_image main">
+		<div class="card_image">
 			<a href="product_page.html">
 				<img src="img/item2.png" alt="">
 			</a>
@@ -21,7 +21,7 @@
 		<div class="tax">$132.00</div>
 	</div>
 	<div class="card" data-badge="new">
-		<div class="card_image main">
+		<div class="card_image">
 			<a href="product_page.html">
 				<img src="img/item3.png" alt="">
 			</a>
@@ -31,7 +31,7 @@
 		<div class="tax">$132.00</div>
 	</div>
 	<div class="card" data-badge="new">
-		<div class="card_image main">
+		<div class="card_image">
 			<a href="product_page.html">
 				<img src="img/item4.jpg" alt="">
 			</a>
