--- a/src/scss/partials/main.scss
+++ b/src/scss/partials/main.scss
@@ -65,6 +65,8 @@
 		.items{
 			background-color: #FFFFFF;
 			padding-top: 120px;
+			padding-left: 20px;
+			padding-right: 20px;
 			.items_title{
 				display: flex;
 				justify-content: center;
@@ -124,6 +126,10 @@
 }
 
 
+
+
+
+
 @media (max-width: 1023px) {
 	.main .container .main_banner .banner_title{
 		color: var(--White, #FFF);
@@ -161,9 +167,6 @@
 		gap: 15px;
 	}
 
-	.main .container .items{
-		padding-top: 30px;
-	}
 
 	.main .container .items .items_title{
 		color: var(--Black-Primary, #000);
