--- a/src/partials/items_card.html
+++ b/src/partials/items_card.html
@@ -1,4 +1,4 @@
-<div class="items_card">
+<div class="items_main">
 	<div class="card" data-badge="new">
 		<div class="card_image">
 			<span class="product-badge">New</span>
