--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -152,6 +152,33 @@
 }
 
 
+
+
+
+
+
+
+@media (max-width: 1579px) {
+	.footer__top{
+		justify-content: space-evenly;
+		gap: 0;
+	}
+	.footer__bottom{
+		justify-content: space-evenly;
+		gap: 0;
+	}
+}
+@media (max-width: 1199px) {
+	.footer__top{
+		flex-wrap: wrap;
+		gap: 15px!important;
+
+	}
+	.footer__bottom{
+		flex-wrap: wrap;
+		gap: 15px!important;
+	}
+}
 @media (max-width: 575px) {
 	.footer{
 		padding: 0 0 30px 0 !important;
@@ -204,7 +231,7 @@
 	.footer__bottom{
 		display: grid;
 		gap: 15px!important;
-		padding-top: 30px;
+		padding: 30px 15px 0 15px
 	}
 	.footer__selects{
 		display: grid;
@@ -212,33 +239,13 @@
 	}
 	.footer__payments{
 		justify-content: space-around;
-	}
-
-}
-
-
-@media (max-width: 1199px) {
-	.footer__top{
-		flex-wrap: wrap;
-		gap: 15px!important;
-
-	}
-	.footer__bottom{
-		flex-wrap: wrap;
-		gap: 15px!important;
-	}
-}
-
-
-@media (max-width: 1579px) {
-	.footer__top{
-		justify-content: space-evenly;
 		gap: 0;
 	}
-	.footer__bottom{
-		justify-content: space-evenly;
-		gap: 0;
-	}
-}
 
+
+	.footer__selects .select2-container {
+		width: 100% !important;
+	}
+
+}
 
