--- a/src/scss/partials/jewelry_collections.scss
+++ b/src/scss/partials/jewelry_collections.scss
@@ -2,7 +2,7 @@
 	background-color: #FFFFFF;
 	.container{
 		display: grid;
-		padding: 120px 0 120px;
+		padding:120px 15px 120px 15px;
 		justify-content: center;
 		.jewelry_collection__title{
 			display: flex;
@@ -24,8 +24,9 @@
 			gap: 30px;
 
 			.jewelry_collection__gallery-left{
+				width: 100%;
 				.jewelry_collection__gallery-image-wrapper {
-					width: 738px;
+					max-width: 738px;
 					height: 919px;
 					position: relative;
 					img{
@@ -72,8 +73,9 @@
 				grid-template-columns: repeat(2, auto); // 2 елементи в рядок
 				grid-template-rows: repeat(2, auto);
 				gap: 37px;
+				width: 100%;
 				.jewelry_collection__gallery-item{
-					width: 354px;
+					max-width: 354px;
 					height: 441px;
 					position: relative;
 					img{
@@ -127,22 +129,25 @@
 
 
 @media (max-width: 1280px) {
+
 	.jewelry_collection .container .jewelry_collection__title{
 		font-size: 48px;
 		display: flex;
-		max-width: 1015px;
-		padding: 0 15px 120px 15px;
+
+		padding: 0 0 120px 0;
 	}
 	.jewelry_collection .container .jewelry_collection__gallery{
 		display: grid;
-		padding: 0 15px 0 15px;
 		gap: 15px;
 	}
 	.jewelry_collection .container .jewelry_collection__gallery .jewelry_collection__gallery-left .jewelry_collection__gallery-image-wrapper{
-		width: 100%;
+		width: 100% !important;
+		max-width: 100% !important;
 	}
 	.jewelry_collection .container .jewelry_collection__gallery .jewelry_collection__gallery-right .jewelry_collection__gallery-item{
-		width: 100%;
+		width: 100% !important;
+		max-width: 100% !important;
+
 	}
 	.jewelry_collection .container .jewelry_collection__gallery .jewelry_collection__gallery-right{
 		gap: 15px;
@@ -152,7 +157,7 @@
 
 @media (max-width: 575px) {
 	.jewelry_collection .container{
-		padding: 34px 0 30px;
+		padding: 34px 15px 30px 15px;
 	}
 
 	.jewelry_collection .container .jewelry_collection__title{
@@ -163,7 +168,7 @@
 		font-weight: 600;
 		line-height: 32px; /* 133.333% */
 		letter-spacing: 0.48px;
-		padding: 0 15px 30px 15px;
+		padding: 0 0 30px 0;
 	}
 	.jewelry_collection .container .jewelry_collection__gallery .jewelry_collection__gallery-left .jewelry_collection__gallery-image-wrapper{
 		height: 361px;
