--- a/src/scss/partials/gift.scss
+++ b/src/scss/partials/gift.scss
@@ -357,6 +357,10 @@
 	.new_collection_banner .container .new_collection_banner__title {
 		font-size: 32px !important;
 	}
+
+	.gift .container{
+		padding: 60px 0 0 0;
+	}
 }
 @media (max-width: 575px) {
 	.gift .container{
