--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -584,6 +584,10 @@ body.scrolled .cart-sidebar .cart-header {
 	padding: 31px 40px 31px 40px;
 }
 
+body.scrolled .header .mobile-menu .container {
+	padding: 30px 20px;
+}
+
 
 
 ///////
