--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -160,12 +160,15 @@
 
 @media (max-width: 1579px) {
 	.footer__top{
-		justify-content: space-evenly;
+		justify-content: space-between;
 		gap: 0;
+		padding: 50px 15px 50px 15px;
 	}
 	.footer__bottom{
-		justify-content: space-evenly;
-		gap: 0;
+		justify-content: space-between;
+		gap: 15px;
+		padding-right: 15px;
+		padding-left: 15px;
 	}
 }
 @media (max-width: 1199px) {
@@ -177,6 +180,7 @@
 	.footer__bottom{
 		flex-wrap: wrap;
 		gap: 15px!important;
+		justify-content: space-evenly;
 	}
 }
 @media (max-width: 575px) {
